# MultiThreadedTCP_file_system

./: .gitignore  :wq  CMakeLists.txt  Client.cpp  Client.h  README.md
data/client/data/: _copy_CMakeLists.txt
data/server/data/: _copy_CMakeLists.txt  test_file.txt
libs/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  core.h
src/: CMakeLists.txt  client.cpp  main.cpp
